fixeo el scrollbar de los ul

--- a/src/components/PersonajesDetail/PersonajeCartaDetail/PersonajeCartaDetail.scss
+++ b/src/components/PersonajesDetail/PersonajeCartaDetail/PersonajeCartaDetail.scss
@@ -43,7 +43,7 @@
 
 }
 
-ul {
+.ul {
 
     overflow-y: scroll;
     height: 200px;
